# nnabla_vision_detection

./: CMakeLists.txt  install_nnabla.sh  install_nnabla_cuda_ext.sh  nodelet_plugins.xml  package.xml
include/nnabla_vision_detection/: nodelet.h
launch/: nnabla_vision_detection.launch  yolov2.launch
src/nodelet/: nnabla_vision_detection_nodelet.cpp  nodelet.cpp
